2004-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/twitest/twitest.c: Make it work on 1 MHz clock.
	* doc/examples/twitest/twitest.dox: Renumber annotations.

2004-07-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/Makefile.am: rearrange demos into their own group.
	* doc/examples/demo/demo.dox: (Ditto)
	* doc/examples/twitest/twitest.dox: (Ditto)
	* doc/api/doxygen.config.in: include doc/examples in INPUT.
	* doc/examples/all-demos.dox: [new] Summary page for the demos.

2004-07-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/malloc.dox: Document realloc() internals.
	* include/stdlib.h: include realloc().
	* libc/stdlib/Makefile.am: include realloc.c.
	* libc/stdlib/malloc.c: move out shared parts to stdlib_private.h.
	* libc/stdlib/stdlib_private.h: [new] shared file for malloc()/realloc().
	* libc/stdlib/realloc.c: [new] implementation of realloc().

2004-07-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/sleep.h: protect function-like macros, fix savannah bug #9013.
	* include/avr/ina90.h: Ditto.

2004-07-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdint.h: created from old inttypes.h.
	* include/inttypes.h: reduced to #include <stdint.h>.

2004-07-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdio.h: Doc update: binary vs. raw streams explained,
	fix for savannah bug #9704.

2004-07-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/fputs_p.c: pgm_read_byte(p++) -> pgm_read_byte(p) ... p++;
	* libc/stdio/puts_p.c: Ditto.
	* libc/stdio/vfprintf.c: Ditto.
	* libc/stdio/vfscanf.c: Ditto.

2004-07-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: Fix the use of progmem tables, closes
	savannah bug #9669.

2004-07-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo.c: Update for ATmega32

2004-07-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/fputs_p.c: replace PRG_RDB by pgm_read_byte
	* libc/stdio/puts_p.c: Ditto.
	* libc/stdio/vfprintf.c: Ditto.