@@ -1,3 +1,9 @@
+2004-08-22  Marek Michalkiewicz  <marekm@amelek.gda.pl>
+
+	* include/string.h (strsep): Remove __ATTR_PURE__, bug #10078.
+	(strtok_r): Remove __ATTR_PURE__ too.
+	(strncmp): Add __ATTR_PURE__.
+
 2004-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* doc/examples/twitest/twitest.c: Make it work on 1 MHz clock.
